Note about outdated openvpn in ubuntu

--- a/server.conf
+++ b/server.conf
@@ -33,6 +33,10 @@ auth SHA256
 # if you update this attribute
 cipher AES-256-CBC
 
+# limit tls ciphersuites and version -- prevent downgrade
+tls-version-min 1.2
+tls-cipher TLS-ECDHE-RSA-WITH-AES-256-GCM-SHA384:TLS-ECDHE-ECDSA-WITH-AES-256-GCM-SHA384:TLS-ECDHE-RSA-WITH-AES-256-CBC-SHA384:TLS-ECDHE-ECDSA-WITH-AES-256-CBC-SHA384
+
 # compression
 comp-lzo
 
