SSH notes, Troubleshooting, Non-ECDHE

--- a/server.conf
+++ b/server.conf
@@ -37,6 +37,9 @@ cipher AES-256-CBC
 tls-version-min 1.2
 tls-cipher TLS-ECDHE-RSA-WITH-AES-256-GCM-SHA384:TLS-ECDHE-ECDSA-WITH-AES-256-GCM-SHA384:TLS-ECDHE-RSA-WITH-AES-256-CBC-SHA384:TLS-ECDHE-ECDSA-WITH-AES-256-CBC-SHA384
 
+# RE-NEGotiate the keys every 10 minutes (default 1 hour, 3600). alternatively see reneg-pkts, reneg-bytes in openvpn 
+reneg-sec 600
+
 # compression
 comp-lzo
 
