--- a/server.conf
+++ b/server.conf
@@ -22,6 +22,7 @@ push "redirect-gateway def1 bypass-dhcp"
 # do not use China DNS servers to avoid DNS poisoning
 push "dhcp-option DNS 208.67.222.222"
 push "dhcp-option DNS 208.67.220.220"
+push "block-outside-dns"
 
 keepalive 10 120
 
