Update for OpenVPN 2.4

--- a/server.conf
+++ b/server.conf
@@ -14,6 +14,7 @@ dh /etc/openvpn/easy-rsa/2.0/keys/dh2048.pem
 # supply vpn subnet
 server 10.8.0.0 255.255.255.0
 ifconfig-pool-persist ipp.txt
+topology subnet
 
 # route all traffic via the openvpn tunnel
 push "redirect-gateway def1 bypass-dhcp"
@@ -37,6 +38,9 @@ cipher AES-256-CBC
 # limit tls ciphersuites and version -- prevent downgrade
 tls-version-min 1.2
 tls-cipher TLS-ECDHE-RSA-WITH-AES-256-GCM-SHA384:TLS-ECDHE-ECDSA-WITH-AES-256-GCM-SHA384:TLS-ECDHE-RSA-WITH-AES-256-CBC-SHA384:TLS-ECDHE-ECDSA-WITH-AES-256-CBC-SHA384
+
+# Use OpenVPN 2.4+ tlsauth for an extra layer of HMAC Auth / TLS Control Channel
+tls-auth my_secret
 
 # RE-NEGotiate the keys every 10 minutes (default 1 hour, 3600). alternatively see reneg-pkts, reneg-bytes in openvpn 
 reneg-sec 600
