Wrong tls-crypt parameter fix

--- a/server.conf
+++ b/server.conf
@@ -40,7 +40,7 @@ tls-version-min 1.2
 tls-cipher TLS-ECDHE-RSA-WITH-AES-256-GCM-SHA384:TLS-ECDHE-ECDSA-WITH-AES-256-GCM-SHA384:TLS-ECDHE-RSA-WITH-AES-256-CBC-SHA384:TLS-ECDHE-ECDSA-WITH-AES-256-CBC-SHA384
 
 # Use OpenVPN 2.4+ tlsauth for an extra layer of HMAC Auth / TLS Control Channel
-tls-auth my_secret
+tls-crypt my_secret
 
 # RE-NEGotiate the keys every 10 minutes (default 1 hour, 3600). alternatively see reneg-pkts, reneg-bytes in openvpn 
 reneg-sec 600
